--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11",
 	"subdirectory": "planned-parenthood",
 	"dependencies": {
-		"feather-icons": "^4.29.0"
+		"feather-icons": "^4.29.0",
+		"roughjs": "^4.5.2"
 	}
 }
